# src/modules/users/users.controller.ts
@@ -1,8 +1,18 @@
-import { Controller, Get, Param, UseInterceptors } from '@nestjs/common'
+import {
+  Body,
+  Controller,
+  Get,
+  HttpException,
+  HttpStatus,
+  Param,
+  Patch,
+  Post,
+  UseInterceptors,
+} from '@nestjs/common'
 import { ApiResponse } from '@nestjs/swagger'
 import { ValidateExistingUser } from 'src/common/decorators/validate-existing-user.decorator'
 import { ValidateExistingUserInterceptor } from 'src/common/interceptors/validate-existing-user/validate-existing-user.interceptor'
-import { ListUserDto } from './users.dto'
+import { ChangePasswordRequestDto, CreateUserRequestDto, ListUserDto } from './users.dto'
 import { UsersService } from './users.service'
 
 @Controller('users')
@@ -28,5 +38,22 @@ export class UsersController {
   @ValidateExistingUser('email')
   async findByEmail(@Param('email') email: string) {
     return this.usersService.findByEmail(email)
+  }
+
+  @Post()
+  @ApiResponse({ status: 201, type: ListUserDto })
+  async create(@Body() data: CreateUserRequestDto) {
+    const userAlreadyExists = await this.usersService.findByEmail(data.email)
+    if (userAlreadyExists) {
+      throw new HttpException('User already exists', HttpStatus.BAD_REQUEST)
+    }
+    return this.usersService.create(data)
+  }
+
+  @ApiResponse({ status: 200, type: ListUserDto })
+  @Patch('change-password/:id')
+  @ValidateExistingUser('id')
+  async changePassword(@Param('id') id: string, @Body() data: ChangePasswordRequestDto) {
+    return this.usersService.changePassword(id, data.oldPassword, data.newPassword)
   }
 }
